# xcstrings-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Localizable.xcstrings  README.md  SECURITY.md  deny.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
benches/: parse_benchmark.rs
src/: error.rs  lib.rs  main.rs  prompts.rs  server.rs
src/io/: fs.rs  mod.rs
src/model/: mod.rs  plural.rs  specifier.rs  translation.rs  xcstrings.rs
src/service/: context.rs  coverage.rs  creator.rs  diff.rs  extractor.rs  file_validator.rs  formatter.rs  glossary.rs  locale.rs  merger.rs  mod.rs  parser.rs  plural_extractor.rs  strings_parser.rs  stringsdict_parser.rs  validator.rs  xliff.rs
src/tools/: coverage.rs  create.rs  diff.rs  extract.rs  files.rs  glossary.rs  manage.rs  mod.rs  parse.rs  plural.rs  strings.rs  translate.rs  xliff.rs
tests/: integration_tests.rs
tests/fixtures/: should_not_translate.xcstrings  simple.xcstrings  utf16le.strings  with_device_variants.xcstrings  with_interpolation.xcstrings  with_multiline.xcstrings  with_plurals.xcstrings  with_stale.xcstrings  with_substitutions.xcstrings  xcode26.xcstrings  xcode_generated.xcstrings
tests/fixtures/en.lproj/: Localizable.strings  Localizable.stringsdict
tests/fixtures/es.lproj/: Localizable.strings  Localizable.stringsdict
tests/helpers/: mod.rs
tests/snapshots/: integration_tests__import_strings_output.snap  integration_tests__snapshot_file_summary.snap  integration_tests__snapshot_roundtrip_formatting.snap  integration_tests__snapshot_untranslated_batch.snap
