[package]
name = "xcstrings-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "MCP server for iOS/macOS .xcstrings localization file management"
repository = "https://github.com/Darkmasters-Pottery/xcstrings-mcp"
keywords = ["mcp", "localization", "ios", "xcstrings", "xcode"]
categories = ["development-tools", "internationalization"]
readme = "README.md"

[lib]
name = "xcstrings_mcp"
path = "src/lib.rs"

[[bin]]
name = "xcstrings-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["rt", "macros", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
schemars = { version = "1.0", features = ["indexmap2"] }
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.12"
clap = { version = "4.6", features = ["derive"] }

[dev-dependencies]
tempfile = "3.27"
pretty_assertions = "1.4"
insta = { version = "1.46", features = ["json"] }
criterion = { version = "0.8", features = ["html_reports"] }
tokio-test = "0.4"
proptest = "1.10"

[[bench]]
name = "parse_benchmark"
harness = false

[profile.release]
strip = true
lto = true
codegen-units = 1

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
